--- a/BillBuddy/Scene/Admob/Views/NativeAdView.xib
+++ b/BillBuddy/Scene/Admob/Views/NativeAdView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21179.7" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21169.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -129,7 +129,7 @@
                 <outlet property="starRatingView" destination="C9x-y3-U6t" id="BX6-Zo-2pJ"/>
                 <outlet property="storeView" destination="jgh-aa-IgX" id="Ef5-1Q-Nj4"/>
             </connections>
-            <point key="canvasLocation" x="13.768115942028986" y="-5.6919642857142856"/>
+            <point key="canvasLocation" x="15" y="-108"/>
         </view>
     </objects>
     <resources>
