--- a/BillBuddy/Scene/Admob/Views/NativeAdView.xib
+++ b/BillBuddy/Scene/Admob/Views/NativeAdView.xib
@@ -25,7 +25,7 @@
                     <rect key="frame" x="76" y="67" width="185" height="17"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="17" id="1cE-P2-qtV"/>
-                        <constraint firstAttribute="width" constant="185" id="jVg-8Z-ply"/>
+                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="185" id="jVg-8Z-ply"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" systemColor="darkTextColor"/>
@@ -43,10 +43,10 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Headline" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1a-JM-qYK">
-                    <rect key="frame" x="76" y="44" width="100" height="23"/>
+                    <rect key="frame" x="76" y="44" width="67" height="23"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="23" id="ezi-ZN-QlP"/>
-                        <constraint firstAttribute="width" constant="100" id="nPr-M9-UVm"/>
+                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="185" id="nPr-M9-UVm"/>
                     </constraints>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <color key="textColor" systemColor="darkTextColor"/>
@@ -59,7 +59,7 @@
                         <constraint firstAttribute="width" constant="47" id="Qrm-SP-Wfe"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                    <state key="normal" title="Install">
+                    <state key="normal" title="설치">
                         <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                 </button>
